--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,8 @@ if(NOT "${CMAKE_BINARY_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}/build")
 endif()
 
 # Bool options (Part 1)
-option(SKYRIM_SE "Legacy Skyrim SE (1.5) build" OFF)
-option(BUILD_NODEJS "Build NodeJS port if ON, use a pre-built otherwise" OFF)
+option(SKYRIM_SE "Legacy Skyrim SE (1.5) build" ON)
+option(BUILD_NODEJS "Build NodeJS port if ON, use a pre-built otherwise" ON)
 
 if(SKYRIM_SE)
   list(APPEND VCPKG_MANIFEST_FEATURES "skyrim-se")
