--- a/.github/workflows/pr-windows-skyrim-se.yml
+++ b/.github/workflows/pr-windows-skyrim-se.yml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
         with:
