--- a/.github/workflows/pr-windows-skyrim-se.yml
+++ b/.github/workflows/pr-windows-skyrim-se.yml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
         with:
